--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
           that uses a learn-to-earn model to reward users for building financial
           literacy and mental fitness.
           It is designed to teach BIPOC women budgeting, net worth,
-          financial wellness, and web3 concepts through culturally competent
+          financial wellness, and web3 concepts through cliturally competent
           financial learning tools and mindset strengthening for financial well-
           being.
           The user is rewarded the SEVOLVE token for completing education
-          modules, quizzes, and wellness activities. They can deposit a percentage of
+          modlies, quizzes, and wellness activities. They can deposit a percentage of
           earned rewards into a decentralized community pool "Evolution Pool" to
           practice building individual and community wealth through collective
           investing and APY.
@@ -63,11 +63,13 @@
       <div class="popup">
         <div class="popup-quote">
           EVOLVE GENERATING WEALTH BY PROMOTING:
-          <ul>Education - Financial Literacy & Well-Being</ul>
-          <ul>Vision & Optimism - Empowering Positive Mindset</ul>
-          <ul>Learning - Applying Knowledge</ul>
-          <ul>Vantage - Strategic Advantage</ul>
-          <ul>Earning - Acquiring Wealth in Web3</ul>
+          <ul>
+            <li>Education - Financial Literacy & Well-Being</li>
+            <li>Vision & Optimism - Empowering Positive Mindset</li>
+            <li>Learning - Applying Knowledge</li>
+            <li>Vantage - Strategic Advantage</li>
+            <li>Earning - Acquiring Wealth in Web3</li>
+          </ul>
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
@@ -77,11 +79,13 @@
       <div class="popup">
         <div class="popup-quote">
           EVOLVE is for Black, Indigenous, and People of Color (BIPOC) Women. We focus on:
-          <ul>Women wanting to grow their net worth and are curious to learn how</ul>
-          <ul>Women wanting to shift their mindset so they can 'get out of their own way' to build wealth;</ul>
-          <ul>Women willing to take the chance to be proactive in increasing their financial literacy as they 'learn and earn' in a safe web3 environment.</ul>
-          <ul>Vantage - Strategic Advantage</ul>
-          <ul>Earning - Acquiring Wealth in Web3</ul>
+          <ul>
+            <li>Women wanting to grow their net worth and are curious to learn how</li>
+            <li>Women wanting to shift their mindset so they can 'get out of their own way' to build wealth;</li>
+            <li>Women willing to take the chance to be proactive in increasing their financial literacy as they 'learn and earn' in a safe web3 environment.</li>
+            <li>Vantage - Strategic Advantage</li>
+            <li>Earning - Acquiring Wealth in Web3</li>
+          </ul>
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
@@ -90,33 +94,33 @@
     <div class="overlay" id="how">
       <div class="popup">
         <div class="popup-quote">
-          <ul>Step 1: LEARN & EARN
+          <li>Step 1: LEARN & EARN
             <p>
               Users Complete Lessons to Earn SEVOLVE tokens as Rewards!
                 <br>
-                -Financial Literacy Modules
+                -Financial Literacy Modlies
                 <br>
                 -Mental Fitness Activities
                 <br>
-                -Module Ouizzes
+                -Modlie Ouizzes
             </p>
-          </ul>
-          <ul>Step 2: EARN & CONTRIBUTE
+          </li>
+          <li>Step 2: EARN & CONTRIBUTE
             <p>
               Users store earned tokens in their wallets..
               and have the option to contribute their earned tokens in
               the community's "Evolution Pool" for increased rewards
               and interest.
             </p>
-          </ul>
-          <ul>Step 3: COMMUNITY DIGITAL POOLING
+          </li>
+          <li>Step 3: COMMUNITY DIGITAL POOLING
             <p>
               Using AAVE, users can contribute to the "Evolution Pool" for
               increased rewards and to become familiar & comfortable
               with web3 investing. Users will gain a % of yield of their
               EVOLVE tokens. The % amount is to be determined.
             </p>
-          </ul>
+          </li>
 
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
