--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
     <div class="overlay" id="solution">
       <div class="popup">
         <div class="popup-quote">
-          EVOLVE is a decentralized education and community pooling platform
-          that uses a learn-to-earn model to reward users for building financial
-          literacy and mental fitness.
+          A Learn-To-Earn & community pooling platform to strengthen financial literacy and mental health; supporting BIPOC women globally to build generational wealth.
+          <br>
+          <br>
           It is designed to teach BIPOC women budgeting, net worth,
           financial wellness, and web3 concepts through cliturally competent
           financial learning tools and mindset strengthening for financial well-
           being.
+          <br>
+          <br>
           The user is rewarded the SEVOLVE token for completing education
           modlies, quizzes, and wellness activities. They can deposit a percentage of
           earned rewards into a decentralized community pool "Evolution Pool" to
@@ -147,7 +149,7 @@
       <a class="link" href="mailto:evolveapp@proton.me" target="_blank">
         <i>&nbsp;</i>Email Us
       </a>
-      <a class="link" href="" target="_blank">
+      <a class="link" href="https://twitter.com/evolve_dapp?s=11&t=J-dhvUXLIXuGaJ1d0kA6Ow" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
       <a class="link" href="https://github.com/orgs/Web3athon-EVOLVE/dashboard" target="_blank">
