--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           being.
           <br>
           <br>
-          The user is rewarded the SEVOLVE token for completing education
+          The user is rewarded the $EVOLVE token for completing education
           modlies, quizzes, and wellness activities. They can deposit a percentage of
           earned rewards into a decentralized community pool "Evolution Pool" to
           practice building individual and community wealth through collective
@@ -101,7 +101,7 @@
         <div class="popup-quote">
           <li>Step 1: LEARN & EARN
             <p>
-              Users Complete Lessons to Earn SEVOLVE tokens as Rewards!
+              Users Complete Lessons to Earn $EVOLVE tokens as Rewards!
                 <br>
                 -Financial Literacy Modlies
                 <br>
