--- a/index.html
+++ b/index.html
@@ -49,15 +49,15 @@
           <br>
           <br>
           It is designed to teach BIPOC women budgeting, net worth,
-          financial wellness, and web3 concepts through cliturally competent
+          financial wellness, and web3 concepts through culturally competent
           financial learning tools and mindset strengthening for financial well-
           being.
           <br>
           <br>
-          The user is rewarded the $EVOLVE token for completing education
-          modlies, quizzes, and wellness activities. They can deposit a percentage of
+          The users are rewarded the $EVOLVE token for completing education
+          modules, quizzes, and wellness activities. They can deposit a percentage of
           earned rewards into a decentralized community pool "Evolution Pool" to
-          practice building individual and community wealth through collective
+          practice to build individual and community wealth through collective
           investing and APY.
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
@@ -69,11 +69,11 @@
         <div class="popup-quote">
           EVOLVE GENERATING WEALTH BY PROMOTING:
           <ul>
-            <li>Education - Financial Literacy & Well-Being</li>
-            <li>Vision & Optimism - Empowering Positive Mindset</li>
-            <li>Learning - Applying Knowledge</li>
-            <li>Vantage - Strategic Advantage</li>
-            <li>Earning - Acquiring Wealth in Web3</li>
+            <li>Education: Financial Literacy & Well-Being.</li>
+            <li>Vision & Optimism: Empowering Positive Mindset.</li>
+            <li>Learning: Applying Knowledge.</li>
+            <li>Vantage: Strategic Advantage.</li>
+            <li>Earning: Acquiring Wealth in Web3. </li>
           </ul>
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
@@ -96,23 +96,33 @@
       </div>
     </div>
 
+    <div class="overlay" id="email">
+      <div class="popup">
+        <div class="popup-quote">
+          evolveapp@proton.me
+        </div>
+        <a class="popup-close" onclick="history.back()">&times;</a>
+      </div>
+    </div>
+
     <div class="overlay" id="how">
       <div class="popup">
         <div class="popup-quote">
+          <ul>
           <li>Step 1: LEARN & EARN
             <p>
               Users Complete Lessons to Earn $EVOLVE tokens as Rewards!
                 <br>
-                -Financial Literacy Modlies
+                -Financial Literacy Modules
                 <br>
                 -Mental Fitness Activities
                 <br>
-                -Modlie Ouizzes
+                -Module Quizzes
             </p>
           </li>
           <li>Step 2: EARN & CONTRIBUTE
             <p>
-              Users store earned tokens in their wallets..
+              Users store earned tokens in their wallets
               and have the option to contribute their earned tokens in
               the community's "Evolution Pool" for increased rewards
               and interest.
@@ -126,14 +136,14 @@
               EVOLVE tokens. The % amount is to be determined.
             </p>
           </li>
-
+        </ul>
         </div>
         <a class="popup-close" onclick="history.back()">&times;</a>
       </div>
     </div>
 
     <div id="userName">
-      EVOLVE is a Education and Finance DApp <br> Utilizing Financial Literacy, Learn & Earn, and Community Pooling on Polygon
+      EVOLVE is an Education and Finance DApp <br> Utilizing Financial Literacy, Learn & Earn, and Community Pooling on Polygon
     </div>
 
     <div id="links">
@@ -149,7 +159,7 @@
       <a class="link" href="#how">
         <i>&nbsp;</i>The Process
       </a>
-      <a class="link" href="mailto:evolveapp@proton.me" target="_blank">
+      <a class="link" href="#email">
         <i>&nbsp;</i>Email Us
       </a>
       <a class="link" href="https://twitter.com/evolve_dapp?s=11&t=J-dhvUXLIXuGaJ1d0kA6Ow" target="_blank">
