--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
       <a class="link" href="#email">
         <i>&nbsp;</i>Email Us
       </a>
-      <a class="link" href="https://twitter.com/evolve_dapp?s=11&t=J-dhvUXLIXuGaJ1d0kA6Ow" target="_blank">
+      <a class="link" href="https://twitter.com/evolve_web3" target="_blank">
         <i class="fab fa-twitter">&nbsp;</i>Twitter
       </a>
       <a class="link" href="https://github.com/orgs/Web3athon-EVOLVE/dashboard" target="_blank">
